--- a/mods/the-bumblezone-fabric.pw.toml
+++ b/mods/the-bumblezone-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "The Bumblezone - Quilt/Fabric"
-filename = "the_bumblezone_quilt-6.6.4+1.19.2.jar"
+filename = "the_bumblezone_quilt-6.6.5+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/eA8SXqWL/versions/wiL6bMua/the_bumblezone_quilt-6.6.4%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/eA8SXqWL/versions/AbwAsFAB/the_bumblezone_quilt-6.6.5%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "f4d9a124c75bc2369a60394fa7a9283c63e6c705"
+hash = "9ecfa995fef98b666b3ba8c25d74f30bfc66467e"
 
 [update]
 [update.modrinth]
 mod-id = "eA8SXqWL"
-version = "wiL6bMua"
+version = "AbwAsFAB"
