updates and config changes

--- a/mods/bottle-your-xp.pw.toml
+++ b/mods/bottle-your-xp.pw.toml
@@ -1,13 +1,13 @@
 name = "Bottle Your Xp"
-filename = "bottleyourxp-1.19.2-3.0.jar"
+filename = "bottleyourxp-1.19.2-3.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/bG2afBot/versions/E0rppUrf/bottleyourxp-1.19.2-3.0.jar"
+url = "https://cdn.modrinth.com/data/bG2afBot/versions/rgUsMGB9/bottleyourxp-1.19.2-3.1.jar"
 hash-format = "sha1"
-hash = "d5c93b03379e029d2ad7bf13c541f31c5ef31f67"
+hash = "22d7ed64697cb3eda812174adbee583a49f61e55"
 
 [update]
 [update.modrinth]
 mod-id = "bG2afBot"
-version = "E0rppUrf"
+version = "rgUsMGB9"
