--- a/mods/chat-heads.pw.toml
+++ b/mods/chat-heads.pw.toml
@@ -1,13 +1,13 @@
 name = "Chat Heads"
-filename = "chat_heads-0.9.0-fabric-1.19.2.jar"
+filename = "chat_heads-0.10.0-fabric-1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/7422MHc3/chat_heads-0.9.0-fabric-1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/zlGYWEYS/chat_heads-0.10.0-fabric-1.19.2.jar"
 hash-format = "sha1"
-hash = "0aa05a0fc9c7dc22bd16f5949dd051d4dc20dda9"
+hash = "b8039def191f70e8c87568db9b7a889dcb6bcdc2"
 
 [update]
 [update.modrinth]
 mod-id = "Wb5oqrBJ"
-version = "7422MHc3"
+version = "zlGYWEYS"
