--- a/mods/emi-loot.pw.toml
+++ b/mods/emi-loot.pw.toml
@@ -1,13 +1,13 @@
 name = "EMI Loot"
-filename = "emi_loot-0.6.0+1.19.jar"
+filename = "emi_loot-0.6.1+1.19.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/h5EhjjmQ/emi_loot-0.6.0%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/8VxvWtcW/emi_loot-0.6.1%2B1.19.jar"
 hash-format = "sha1"
-hash = "53270761ab6ee274a840594d3239aff11d64d738"
+hash = "c30e2a25a5521bde65fb51b60271080dd609dce2"
 
 [update]
 [update.modrinth]
 mod-id = "qbbO7Jns"
-version = "h5EhjjmQ"
+version = "8VxvWtcW"
