--- a/mods/emi.pw.toml
+++ b/mods/emi.pw.toml
@@ -1,13 +1,13 @@
 name = "EMI"
-filename = "emi-0.6.3+1.19.2.jar"
+filename = "emi-0.6.5+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/fRiHVvU7/versions/cCpcaR2M/emi-0.6.3%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/fRiHVvU7/versions/vlDdC1kL/emi-0.6.5%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "23625214a0678d97aef8318060e607656666c541"
+hash = "78fb4eff24bb1237712cd97b71e0ee575e919975"
 
 [update]
 [update.modrinth]
 mod-id = "fRiHVvU7"
-version = "cCpcaR2M"
+version = "vlDdC1kL"
