--- a/mods/chat-heads.pw.toml
+++ b/mods/chat-heads.pw.toml
@@ -1,13 +1,13 @@
 name = "Chat Heads"
-filename = "chat_heads-0.10.0-fabric-1.19.2.jar"
+filename = "chat_heads-0.10.4-fabric-1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/zlGYWEYS/chat_heads-0.10.0-fabric-1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/UaDM8ogf/chat_heads-0.10.4-fabric-1.19.2.jar"
 hash-format = "sha1"
-hash = "b8039def191f70e8c87568db9b7a889dcb6bcdc2"
+hash = "d3e875b6190760c4e80388887c37f6566b368678"
 
 [update]
 [update.modrinth]
 mod-id = "Wb5oqrBJ"
-version = "zlGYWEYS"
+version = "UaDM8ogf"
