--- a/mods/yungs-api.pw.toml
+++ b/mods/yungs-api.pw.toml
@@ -1,13 +1,13 @@
 name = "YUNG's API"
-filename = "YungsApi-1.19.2-Fabric-3.8.6.jar"
+filename = "YungsApi-1.19.2-Fabric-3.8.7.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Ua7DFN59/versions/xvoWCwex/YungsApi-1.19.2-Fabric-3.8.6.jar"
+url = "https://cdn.modrinth.com/data/Ua7DFN59/versions/LYoQlbQt/YungsApi-1.19.2-Fabric-3.8.7.jar"
 hash-format = "sha1"
-hash = "cf4b4195a1505e9fd772e476a2ef2f69b12a2b77"
+hash = "669bcfd69e9f15a06e258635197d1e886e6abd96"
 
 [update]
 [update.modrinth]
 mod-id = "Ua7DFN59"
-version = "xvoWCwex"
+version = "LYoQlbQt"
