more qol and decoration

--- a/mods/the-bumblezone-fabric.pw.toml
+++ b/mods/the-bumblezone-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "The Bumblezone - Quilt/Fabric"
-filename = "the_bumblezone_quilt-6.6.11+1.19.2.jar"
+filename = "the_bumblezone_quilt-6.6.13+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/eA8SXqWL/versions/HVQdyeu3/the_bumblezone_quilt-6.6.11%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/eA8SXqWL/versions/u3f02zMI/the_bumblezone_quilt-6.6.13%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "14fe36af89bff1788161eed3c16429b790abb92d"
+hash = "3dcd4ea50940384629ff198bba33ab4d8b0ab80b"
 
 [update]
 [update.modrinth]
 mod-id = "eA8SXqWL"
-version = "HVQdyeu3"
+version = "u3f02zMI"
