--- a/mods/chat-heads.pw.toml
+++ b/mods/chat-heads.pw.toml
@@ -1,13 +1,13 @@
 name = "Chat Heads"
-filename = "chat_heads-0.10.4-fabric-1.19.2.jar"
+filename = "chat_heads-0.10.5-fabric-1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/UaDM8ogf/chat_heads-0.10.4-fabric-1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/NmmLuEN5/chat_heads-0.10.5-fabric-1.19.2.jar"
 hash-format = "sha1"
-hash = "d3e875b6190760c4e80388887c37f6566b368678"
+hash = "0d532022bb8bb946cc769ce1fbe8ac824e1a87c8"
 
 [update]
 [update.modrinth]
 mod-id = "Wb5oqrBJ"
-version = "UaDM8ogf"
+version = "NmmLuEN5"
