--- a/mods/balm.pw.toml
+++ b/mods/balm.pw.toml
@@ -1,13 +1,13 @@
 name = "Balm"
-filename = "balm-fabric-1.19.2-4.5.4.jar"
+filename = "balm-fabric-1.19.2-4.5.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/MBAkmtvl/versions/xAQtenTo/balm-fabric-1.19.2-4.5.4.jar"
+url = "https://cdn.modrinth.com/data/MBAkmtvl/versions/zq3nXKQW/balm-fabric-1.19.2-4.5.6.jar"
 hash-format = "sha1"
-hash = "eef5ef67db3f7fac079a808ac885db7478d53cc6"
+hash = "5c6d3133037c0f3b424a67e0155380577c2abb1f"
 
 [update]
 [update.modrinth]
 mod-id = "MBAkmtvl"
-version = "xAQtenTo"
+version = "zq3nXKQW"
