--- a/mods/giant-spawn.pw.toml
+++ b/mods/giant-spawn.pw.toml
@@ -1,13 +1,13 @@
 name = "Giant Spawn"
-filename = "giantspawn-1.19.2-4.3.jar"
+filename = "giantspawn-1.19.2-4.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/iWwn7s9U/versions/oWyTc5fS/giantspawn-1.19.2-4.3.jar"
+url = "https://cdn.modrinth.com/data/iWwn7s9U/versions/kiebY7Wl/giantspawn-1.19.2-4.4.jar"
 hash-format = "sha1"
-hash = "4f2a38ebd41913f2e9efd3147a5cd54aece2557c"
+hash = "769e3b290117e73009b00557c6fa5349b51aae60"
 
 [update]
 [update.modrinth]
 mod-id = "iWwn7s9U"
-version = "oWyTc5fS"
+version = "kiebY7Wl"
