--- a/mods/chat-heads.pw.toml
+++ b/mods/chat-heads.pw.toml
@@ -1,13 +1,13 @@
 name = "Chat Heads"
-filename = "chat_heads-0.10.5-fabric-1.19.2.jar"
+filename = "chat_heads-0.10.7-fabric-1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/NmmLuEN5/chat_heads-0.10.5-fabric-1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/fUvp2u8c/chat_heads-0.10.7-fabric-1.19.2.jar"
 hash-format = "sha1"
-hash = "0d532022bb8bb946cc769ce1fbe8ac824e1a87c8"
+hash = "aedb0f47f3d1445f1b6d52b1f34c474f19b5e5e3"
 
 [update]
 [update.modrinth]
 mod-id = "Wb5oqrBJ"
-version = "NmmLuEN5"
+version = "fUvp2u8c"
