--- a/mods/doggo-mod-overhauled.pw.toml
+++ b/mods/doggo-mod-overhauled.pw.toml
@@ -1,13 +1,13 @@
 name = "Doggo Mod Overhauled"
-filename = "doggo-mod-overhauled-1.0.1-1.19.2.jar"
+filename = "doggo-mod-overhauled-1.0.2-1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ReOjbL4W/versions/Q5Fy2XZ3/doggo-mod-overhauled-1.0.1-1.19.2.jar"
+url = "https://cdn.modrinth.com/data/ReOjbL4W/versions/CGo1Tcwm/doggo-mod-overhauled-1.0.2-1.19.2.jar"
 hash-format = "sha1"
-hash = "700c356f0fb6c269442a021f543486ce5ffe730c"
+hash = "b823961d3cd28def394c63de7699fca9ffbcf824"
 
 [update]
 [update.modrinth]
 mod-id = "ReOjbL4W"
-version = "Q5Fy2XZ3"
+version = "CGo1Tcwm"
