--- a/mods/yungs-api.pw.toml
+++ b/mods/yungs-api.pw.toml
@@ -1,13 +1,13 @@
 name = "YUNG's API"
-filename = "YungsApi-1.19.2-Fabric-3.8.8.jar"
+filename = "YungsApi-1.19.2-Fabric-3.8.9.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Ua7DFN59/versions/Em3G31xp/YungsApi-1.19.2-Fabric-3.8.8.jar"
+url = "https://cdn.modrinth.com/data/Ua7DFN59/versions/IxuGYnWF/YungsApi-1.19.2-Fabric-3.8.9.jar"
 hash-format = "sha1"
-hash = "163c183e8fe97fd5ff4ad2d8f81bddbb72314502"
+hash = "ca7b31575c4f4e4205d14595c82d1bb27d34e568"
 
 [update]
 [update.modrinth]
 mod-id = "Ua7DFN59"
-version = "Em3G31xp"
+version = "IxuGYnWF"
