--- a/shaderpacks/rethinking-voxels.pw.toml
+++ b/shaderpacks/rethinking-voxels.pw.toml
@@ -1,13 +1,13 @@
 name = "Rethinking Voxels"
-filename = "rethinking-voxels_beta18.zip"
+filename = "rethinking-voxels_beta18c.zip"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/kmwfVOoi/versions/5NlLe3RT/rethinking-voxels_beta18.zip"
+url = "https://cdn.modrinth.com/data/kmwfVOoi/versions/kVgJJYab/rethinking-voxels_beta18c.zip"
 hash-format = "sha1"
-hash = "a431045300e530083d22a81bf18da6f40f1df495"
+hash = "b0a7969af2ab5bd827b72bf773a53d6976336a78"
 
 [update]
 [update.modrinth]
 mod-id = "kmwfVOoi"
-version = "5NlLe3RT"
+version = "kVgJJYab"
