--- a/mods/adorn.pw.toml
+++ b/mods/adorn.pw.toml
@@ -1,13 +1,13 @@
 name = "Adorn"
-filename = "Adorn-3.8.1+1.19.2-fabric.jar"
+filename = "Adorn-3.8.2+1.19.2-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/E6FUtRJh/versions/E0HCy6sV/Adorn-3.8.1%2B1.19.2-fabric.jar"
+url = "https://cdn.modrinth.com/data/E6FUtRJh/versions/hIgE4jl7/Adorn-3.8.2%2B1.19.2-fabric.jar"
 hash-format = "sha1"
-hash = "8fb29854a5f37f0cc69c251b621977fb842b5efb"
+hash = "93783a5e0c950091a9d01f775d44528a497b046c"
 
 [update]
 [update.modrinth]
 mod-id = "E6FUtRJh"
-version = "E0HCy6sV"
+version = "hIgE4jl7"
