--- a/mods/wthit.pw.toml
+++ b/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-quilt-5.14.1.jar"
+filename = "wthit-quilt-5.15.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/NmGfP3mL/wthit-quilt-5.14.1.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/7C2ULNNT/wthit-quilt-5.15.1.jar"
 hash-format = "sha1"
-hash = "da252da97248407ca41c7202046923e030019622"
+hash = "751db08ca88c328593c198599137972818451e6c"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "NmGfP3mL"
+version = "7C2ULNNT"
